@@ -78,7 +78,7 @@ sub homepage {
 
     # Announcements
     td;
-     my $an = $self->dbThreadGet(type => 'an', order => 't.id DESC', results => 2);
+     my $an = $self->dbThreadGet(type => 'an', sort => 'id', reverse => 1, results => 2);
      h1;
       a href => '/t/an', mt '_home_announcements';
      end;
@@ -98,7 +98,7 @@ sub homepage {
      h1;
       a href => '/t', mt '_home_recentposts';
      end;
-     my $posts = $self->dbThreadGet(what => 'lastpost boardtitles', results => 10, order => 'tpl.date DESC', notusers => 1);
+     my $posts = $self->dbThreadGet(what => 'lastpost boardtitles', results => 10, sort => 'lastpost', reverse => 1, notusers => 1);
      ul;
       for (@$posts) {
         my $boards = join ', ', map mt("_dboard_$_->{type}").($_->{iid}?' > '.$_->{title}:''), @{$_->{boards}};
@@ -120,7 +120,7 @@ sub homepage {
      h1;
       a href => '/v/rand', mt '_home_randomvn';
      end;
-     my $random = $self->dbVNGet(results => 10, order => 'RANDOM()');
+     my $random = $self->dbVNGet(results => 10, sort => 'rand');
      ul;
       for (@$random) {
         li;
@@ -154,7 +154,7 @@ sub homepage {
      h1;
       a href => strftime('/r?ma=%Y%m%d;o=d;s=released', gmtime), mt '_home_justreleased';
      end;
-     my $justrel = $self->dbReleaseGet(results => 10, order => 'rr.released DESC', unreleased => 0, what => 'platforms');
+     my $justrel = $self->dbReleaseGet(results => 10, sort => 'released', reverse => 1, unreleased => 0, what => 'platforms');
      ul;
       for (@$justrel) {
         li;
@@ -300,7 +300,7 @@ sub docpage {
       $ii;
     }eg;
     s{^:TOP5CONTRIB:$}{
-      my $l = $self->dbUserGet(results => 6, order => 'c_changes DESC');
+      my $l = $self->dbUserGet(results => 6, sort => 'changes', reverse => 1);
       '<dl>'.join('', map $_->{id} == 1 ? () :
         sprintf('<dt><a href="/u%d">%s</a></dt><dd>%d</dd>', $_->{id}, $_->{username}, $_->{c_changes}),
       @$l).'</dl>';
